@@ -47,6 +47,7 @@ S3method(as.phylo, splits)
 S3method(as.splits, phylo)
 S3method(as.splits, multiPhylo)
 S3method(as.splits, prop.part)
+S3method(as.splits, networx)
 S3method(as.prop.part, splits)
 S3method(logLik, pml)
 S3method(logLik, pmlPart)
